test/must_fail/sub_in_subcircuit.ref
warn: Using sub in subcircuit is completely untested in v0.1
error: Model LS1 not found!
  [sub_in_subcircuit.ngjs:0:0] in <anonymous>()
    s2.sub('X1', 'LS1', ['b', 2]);
       ^
hint: Unlike spice, models needs to be defined before they are used!
hint: Attempted files:
  ~/ngspicejs-github/model/DIODE/LS1.json
  ~/ngspicejs-github/model/JFET_N/LS1.json
  ~/ngspicejs-github/model/MOSFET_N/LS1.json
  ~/ngspicejs-github/model/MOSFET_P/LS1.json
  ~/ngspicejs-github/model/NPN/LS1.json
  ~/ngspicejs-github/model/OPAMP/LS1.json
  ~/ngspicejs-github/model/OTHER/LS1.json
  ~/ngspicejs-github/model/PNP/LS1.json
  ~/ngspicejs-github/model/TIMER/LS1.json
  ~/ngspicejs-github/model/VREF/LS1.json
  ~/ngspicejs-github/model/DIODE/LS1.sub
  ~/ngspicejs-github/model/JFET_N/LS1.sub
  ~/ngspicejs-github/model/MOSFET_N/LS1.sub
  ~/ngspicejs-github/model/MOSFET_P/LS1.sub
  ~/ngspicejs-github/model/NPN/LS1.sub
  ~/ngspicejs-github/model/OPAMP/LS1.sub
  ~/ngspicejs-github/model/OTHER/LS1.sub
  ~/ngspicejs-github/model/PNP/LS1.sub
  ~/ngspicejs-github/model/TIMER/LS1.sub
  ~/ngspicejs-github/model/VREF/LS1.sub
  ~/ngspicejs-github/model/DIODE/LS1.ngjs
  ~/ngspicejs-github/model/JFET_N/LS1.ngjs
  ~/ngspicejs-github/model/MOSFET_N/LS1.ngjs
  ~/ngspicejs-github/model/MOSFET_P/LS1.ngjs
  ~/ngspicejs-github/model/NPN/LS1.ngjs
  ~/ngspicejs-github/model/OPAMP/LS1.ngjs
  ~/ngspicejs-github/model/OTHER/LS1.ngjs
  ~/ngspicejs-github/model/PNP/LS1.ngjs
  ~/ngspicejs-github/model/TIMER/LS1.ngjs
  ~/ngspicejs-github/model/VREF/LS1.ngjs

hint: Similar  models: LS1,LS2,BS170,LM741,S9012,TL071,TL431,J201,MPSA13,1N34A,1N60P,BD136,BD139,BD140,BS170_2,FR107,IDEAL,L272M,LM258,MY_RES1,TL072,TL431_2,UA741,1N4007,1N4148,1N5399,1N5819,2SK246,2SK30A,MPSA06,OC44,TIP120
hint: All  models: 1N34A,1N4007,1N4148,1N5399,1N5819,1N5819WS,1N60P,2N2222A,2N242,2N3565,2N3904,2N3904_DARLINGTON,2N3906,2N3906_170,2N3906_210,2N5457,2N5457_LEVEL2,2N7000,2N7000_2,2SK246,2SK30A,AC128_125,AC128_87,BAT43,BC546,BC547,BC547B,BC547_DARLINGTON,BC549,BC557,BC557_200,BD136,BD136_120,BD136_180,BD136_340,BD139,BD139_130,BD140,BF245A,BS170,BS170_2,FR107,FR207,IDEAL,IDEAL_OPAMP,IRF5305,IRF540N,IRF540N_2,IRLZ44N,J201,J201_LONG_LEADS,J201_LONG_LEADS_NGJS,JRC4558,L272M,L272M_2,LED_BLUE,LED_GREEN,LED_RED,LED_WHITE,LED_YELLOW,LM258,LM741,LS1,LS2,MMBFJ177LT1G,MPSA06,MPSA13,MY_CLAMP,MY_RES1,MY_RES2,MY_RES3,NE5532,OC44,S9012,TIP120,TL071,TL072,TL431,TL431_2,TRANSFORMER,UA741,VOLTAGE_DOUBLER,ZENER_C2V4ST,ZENER_C9V1ST

Stack trace (9 frames):
  [Exception.js:0:0, core.js:0:0] in Exception()
    Internal.buffered_stack_trace(aMessage || "Error");
             ^
  [find_model.js:0:0, core.js:0:0] in find_model()
    throw new Exception('Model ' + aModel + (aKind ? ' of kind ' + aKind : '') + ' not found!');
          ^
  [assert/assert_model_exists.js:0:0, core.js:0:0] in assert_model_exists()
    find_model(aDevice, aKind, aModel, true);
    ^
  [device/sub.js:0:0, core.js:0:0] in Sub.model()
    assert_model_exists(this, '', aModel);
    ^
  [device/sub.js:0:0, core.js:0:0] in Sub()
    this.model(aModel);
         ^
  [device/sub.js:0:0, core.js:0:0] in sub()
    return new Sub(aName, aModel, aNets, aParams);
           ^
  [model/sub_model.js:0:0, core.js:0:0] in SubModel.special_call()
    var d = aFunction.apply({}, aArguments);
                      ^
  [model/sub_model.js:0:0, core.js:0:0] in SubModel.sub()
    return this.special_call(sub, [aName, aModel, aNets, aParams]);
                ^
  [sub_in_subcircuit.ngjs:0:0] in <anonymous>()
    s2.sub('X1', 'LS1', ['b', 2]);
       ^

exit(12)
